<resources>
    <string name="app_name">RetrofitUIdesign</string>
    <string name="welcome">Welcome!</string>
    <string name="it_s_easier_to_sign_up_now">It\'s easier to Sign Up now</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="text1">Already have an account<b>  Sign in</b> </string>
    <string name="sign_up">Sign Up</string>
    <string name="email_address">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="text3"> Already have account? <b><font fgcolor='#8E24AA'> Sign In</font></b></string>
    <string name="sign_in">Sign In</string>
    <string name="text4"> Don\'t have an account? <b><font fgcolor='#8E24AA'> Sign up</font></b></string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget password</string>
    <string name="verification_code">Verification Code</string>
    <string name="text5"> Don\'t receive any code?  <b><font fgcolor='FF2F48E1'> Resent OPT</font></b></string>
    <string name="enter_your_email_address_to_reset_your_password">Enter Your Email address to\nreset your password</string>
    <string name="send_otp">SendOTP</string>
    <string name="text6">Remember password?<b><font fgcolor='#FFFFFF'>Sign In</font>
    </b></string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="text7">Enter your new password\nin below fields</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="phone_number">Phone Number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="go_to_home">Go to Home</string>
    <string name="update_account">Update Account</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_user_name">Enter your User Name</string>
    <string name="enter_your_city">Enter your City</string>
    <string name="update">Update</string>
</resources>