<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NavFragment.DashboardFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/text12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/update_account"
        android:textColor="#100F0F"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text13"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="Ph.no"
        android:textColor="#151414"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@id/update_phoneNum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text12" />
    <TextView
        android:id="@+id/update_phoneNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="03086967164"
        android:textColor="#575656"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
app:layout_constraintStart_toEndOf="@id/text13"        app:layout_constraintTop_toBottomOf="@id/text12" />



    <EditText
        android:id="@+id/update_email"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/shape"
        android:cursorVisible="true"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:textColorHint="#A49F9F"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_phoneNum" />
    <EditText
        android:id="@+id/update_userName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/shape"
        android:cursorVisible="true"
        android:inputType="textPersonName"
        android:hint="@string/enter_your_user_name"
        android:textColorHint="#A49F9F"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_email" />
    <EditText
        android:id="@+id/update_city"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/shape"
        android:cursorVisible="true"
        android:inputType="textPostalAddress"
        android:hint="@string/enter_your_city"
        android:textColorHint="#A49F9F"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textCursorDrawable="@drawable/cursor_drawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_userName" />
    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/update_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="15dp"
        android:background="@color/purple_200"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>




</androidx.constraintlayout.widget.ConstraintLayout>