<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sign_background"
    tools:context=".Activities.SignIn">

    <TextView
        android:id="@+id/text10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_margin="35dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:text="@string/phone_number"
                android:textColor="#9B9898"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/signIn_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/shape"
                android:cursorVisible="true"
                android:inputType="phone"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text11" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="#9B9898"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signIn_phoneNum" />

            <EditText
                android:id="@+id/signIn_password"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="password"
                android:background="@drawable/shape"
                android:cursorVisible="true"
                android:inputType="textVisiblePassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textCursorDrawable="@drawable/cursor_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text12" />

            <CheckBox
                android:id="@+id/check_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signIn_password" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="#655C5C"
                app:layout_constraintBottom_toBottomOf="@id/check_signIn"
                app:layout_constraintStart_toEndOf="@id/check_signIn"
                app:layout_constraintTop_toBottomOf="@id/signIn_password" />

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/forget_password"
                android:textColor="#655C5C"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signIn_password" />

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_signIn"
                android:layout_width="180dp"
                android:layout_height="50dp"
                app:cardBackgroundColor="#AA57B8"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text13">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/signup_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text4"
                android:textColor="#655C5C"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_signIn" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>